ManagedMediaSource content should be evicted whenever it is under memory pressure https://bugs.webkit.org/show_bug.cgi?id=252938 rdar://105908445

Reviewed by Youenn Fablet.

Let the MediaElement control when eviction under memory pressure should
occur.

* LayoutTests/media/media-source/media-managedmse-memorypressure-expected.txt:
* LayoutTests/media/media-source/media-managedmse-memorypressure.html:
* Source/WebCore/html/HTMLMediaElement.cpp:
(WebCore::HTMLMediaElement::purgeBufferedDataIfPossible):
* Source/WebCore/page/MemoryRelease.cpp:
(WebCore::releaseCriticalMemory):

Canonical link: https://commits.webkit.org/260871@main